Sending update and delete mail to attendee
