# docs/swagger.yaml
@@ -8,9 +8,13 @@ definitions:
     type: object
   model.EventAdd:
     properties:
-      Date:
-        type: string
       description:
+        type: string
+      endDate:
+        type: string
+      location:
+        type: string
+      startDate:
         type: string
       title:
         type: string
@@ -22,15 +26,25 @@ definitions:
       password:
         type: string
     type: object
+  model.RegisterEvent:
+    properties:
+      eventId:
+        type: integer
+    type: object
   model.UpdateEvent:
     properties:
-      Date:
-        type: string
       description:
+        type: string
+      endDate:
         type: string
       id:
         type: integer
+      location:
+        type: string
+      startDate:
+        type: string
       title:
+        description: UserId      int    `json:"userId"`
         type: string
     type: object
   model.User:
@@ -57,17 +71,17 @@ paths:
   /createEvent:
     post:
       consumes:
-        - application/json
+      - application/json
       description: Create event after logging in
       parameters:
-        - description: Create Event
-          in: body
-          name: order
-          required: true
-          schema:
-            $ref: "#/definitions/model.EventAdd"
+      - description: Create Event
+        in: body
+        name: order
+        required: true
+        schema:
+          $ref: '#/definitions/model.EventAdd'
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -75,21 +89,21 @@ paths:
             type: string
       summary: Create event
       tags:
-        - example
+      - example
   /deleteEvent:
     delete:
       consumes:
-        - application/json
+      - application/json
       description: Delete event mapped to user after logging in
       parameters:
-        - description: Delete Event
-          in: body
-          name: order
-          required: true
-          schema:
-            $ref: "#/definitions/model.DeleteEvent"
+      - description: Delete Event
+        in: body
+        name: order
+        required: true
+        schema:
+          $ref: '#/definitions/model.DeleteEvent'
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -97,14 +111,14 @@ paths:
             type: string
       summary: Delete event
       tags:
-        - example
+      - example
   /events:
     get:
       consumes:
-        - application/json
+      - application/json
       description: Get list of all event after logging in
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -112,21 +126,21 @@ paths:
             type: string
       summary: Get event
       tags:
-        - example
+      - example
   /login:
     post:
       consumes:
-        - application/json
+      - application/json
       description: register user
       parameters:
-        - description: Login User
-          in: body
-          name: order
-          required: true
-          schema:
-            $ref: "#/definitions/model.LoginRequest"
+      - description: Login User
+        in: body
+        name: order
+        required: true
+        schema:
+          $ref: '#/definitions/model.LoginRequest'
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -134,21 +148,21 @@ paths:
             type: string
       summary: Login user by taking his email and password
       tags:
-        - example
+      - example
   /register:
     post:
       consumes:
-        - application/json
+      - application/json
       description: register user
       parameters:
-        - description: Register User
-          in: body
-          name: order
-          required: true
-          schema:
-            $ref: "#/definitions/model.User"
+      - description: Register User
+        in: body
+        name: order
+        required: true
+        schema:
+          $ref: '#/definitions/model.User'
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -156,21 +170,43 @@ paths:
             type: User
       summary: Register user by taking his email and password
       tags:
-        - example
+      - example
+  /registerEvent:
+    post:
+      consumes:
+      - application/json
+      description: Register for any event
+      parameters:
+      - description: Register Event
+        in: body
+        name: order
+        required: true
+        schema:
+          $ref: '#/definitions/model.RegisterEvent'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: Register event
+      tags:
+      - example
   /updateEvent:
     put:
       consumes:
-        - application/json
+      - application/json
       description: Update event mapped to user after logging in
       parameters:
-        - description: Update Event
-          in: body
-          name: order
-          required: true
-          schema:
-            $ref: "#/definitions/model.UpdateEvent"
+      - description: Update Event
+        in: body
+        name: order
+        required: true
+        schema:
+          $ref: '#/definitions/model.UpdateEvent'
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -178,5 +214,5 @@ paths:
             type: string
       summary: Update event
       tags:
-        - example
+      - example
 swagger: "2.0"
